tests/rosetta/transpiler/Clojure/cantor-set.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/cantor-set.clj:28:1).
Unable to resolve symbol: width in this context

Full report at:
/tmp/clojure-5564514369429205312.edn
